@startuml
abstract class assignable_parser {
	+ operator=()
	# <i>final</i> process_result()
	# <i>virtual</i> process_parsed_result()
}

class type_assignable_parser {
	# <i>final</i> process_parsed_result()
}

class flag_assignable_parser {
	# <i>final</i> process_parsed_result()
}

class lift_parser {
	# <i>final</i> process_parsed_result()
}

assignable_parser <|-- type_assignable_parser
assignable_parser <|-- flag_assignable_parser
assignable_parser <|-- lift_parser
@enduml
